# sd-dkr

./: .gitignore  .gitmodules  LICENSE  README.md  sd-dkr.code-workspace
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  board.c  main.c  multicore.c  pio_sm.c  system_defs.h  util.c
src/app/: CMakeLists.txt  app.c
src/app/shell/: CMakeLists.txt  shell.c  shell_stub.c
src/app/shell/cmd/: cmd.c  cmd.h  cmd_t.h
src/app/shell/include/: shell.h
src/app/shell/term/: term.c  term.h
src/cmt/: cmt.c
src/cmt/include/: cmt_t.h
src/dbusc/: CMakeLists.txt  dbusc.c  dbusc.pio
src/dbusc/cmd/: cmds.c
src/dbusc/include/: dbusc.h
src/dbusm/: CMakeLists.txt  dbusm.c  dbusm.pio
src/dbusm/cmd/: CMakeLists.txt  cmds.c  cmds.h
src/dbusm/include/: dbusm.h
src/debugging/: debug_support.c
src/debugging/cmd/: cmds.c  cmds.h
src/dskops/cmd/: cmds.c
src/hwrt/: hwrt.c
src/include/: util.h
src/picohlp/: picoutil.c
src/picohlp/cmd/: cmds.c
src/picohlp/include/: picoutil.h
